# redme_generator

./: LICENSE  Pipfile  pyproject.toml  redme_gen.py  requirements.txt  sample.yaml
src/readmegen/: readme_gen.py
tests/: config_test.py  conftest.py  libs_sources_test.py  main_test.py  prerequisites_test.py  python_dependecies_test.py
